Fix bug that was looking up a home_teachee's address incorrectly in the show.html.erb view. Make it possible for a user to edit their home teachee's contact information.

--- a/app/views/home_teachees/index.html.erb
+++ b/app/views/home_teachees/index.html.erb
@@ -1,21 +1,23 @@
 <h1>Here are the home teachees for you: </h1>
 <div class='row'>
-  <% @home_teachees.each do |ht| %>
-    <div class='col-md-3'>
-      <div class='ht_index_box'>
-        <div class='panel panel-default'>
-          <div class='panel-heading'>
-            Name: <%= link_to ht.name, home_teachee_path(ht) %>
-          </div>
-          <div class='panel-body'>
-            <p>Address: <%= ht.street_number %></p>
-            <p>Phone: <%= ht.phone1 %></p>
-            <div class='issue_count'>
-              <%= link_to ht.issues.count, home_teachee_path(ht) %>
+  <% cache do %>
+    <% @home_teachees.each do |ht| %>
+      <div class='col-md-3'>
+        <div class='ht_index_box'>
+          <div class='panel panel-default'>
+            <div class='panel-heading'>
+              Name: <%= link_to ht.name, home_teachee_path(ht) %>
+            </div>
+            <div class='panel-body'>
+              <p>Address: <%= ht.street_number %></p>
+              <p>Phone: <%= ht.phone1 %></p>
+              <div class='issue_count'>
+                <%= link_to ht.number_of_issues, home_teachee_path(ht) %>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    <% end %>
   <% end %>
 </div>
